[project]
name = "smoldyn"
version = "2.7"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Dilawar Singh", email = "dilawar.s.rajput@gmail.com" }]
requires-python = ">=3.9"
dependencies = []

[project.scripts]
smoldyn = "smoldyn:main"

[tool.scikit-build]
minimum-version = "build-system.requires"
build-dir = "build/{wheel_tag}"

[tool.uv]
cache-keys = [
    { file = "pyproject.toml" },
    { file = "source/**/*.{h,c,hpp,cpp}" },
    { file = "CMakeLists.txt" },
]

[build-system]
requires = ["scikit-build-core>=0.10", "pybind11"]
build-backend = "scikit_build_core.build"
